# rlss23-dqn-tutorial

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
dqn_tutorial/: collect_data.py  fqi.py  notebook_utils.py  replay_buffer.py
dqn_tutorial/dqn/: __init__.py  collect_data.py  dqn.py  dqn_no_target.py  evaluation.py  q_network.py  replay_buffer.py
dqn_tutorial/fqi/: __init__.py  collect_data.py  fqi.py  notebook.py
notebooks/: 1_fitted_q_iteration_fqi.ipynb  2_deep_q_network_dqn.ipynb  2_deep_q_network_dqn_1.ipynb  2_deep_q_network_dqn_components.ipynb  3_deep_q_network_dqn_2.ipynb  3_deep_q_network_dqn_update.ipynb
notebooks/solutions/: 1_fitted_q_iteration_fqi.ipynb  2_deep_q_network_dqn_components.ipynb  3_deep_q_network_dqn_update.ipynb
tests/: test_buffer.py  test_data_collect.py  test_dqn.py  test_fqi.py
